--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,9 @@
 
+<app-nabvar></app-nabvar>
 
-<router-outlet></router-outlet>
+
+<div class="container pt-5">
+
+    <router-outlet></router-outlet>
+
+</div>
