12/09/2019, intercepteur, Guard, et evenement du router

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,10 @@
 
 <div class="container pt-5">
 
+    <div class="alert alert-info" *ngIf="isLoading">
+        Chargement ............
+    </div>
+
     <router-outlet></router-outlet>
 
 </div>
